ci(conformance): run G3 replay over a live engine (embedded on JDK22, spawn on JDK21) (#56) (#62)